kubernetes/apps/external/nextcloud/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  namespace: external
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
