kubernetes/apps/external/nextcloud/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud
  namespace: external
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: nextcloud.svg
    gethomepage.dev/name: Nextcloud
    gethomepage.dev/group: Storage
    gethomepage.dev/widget.type: nextcloud
    gethomepage.dev/widget.url: https://nextcloud.${SECRET_DOMAIN}
    gethomepage.dev/widget.username: ${SECRET_NEXTCLOUD_USERNAME}
    gethomepage.dev/widget.password: ${SECRET_NEXTCLOUD_PASSWORD}
    external-dns.alpha.kubernetes.io/target: "ingress.${SECRET_DOMAIN}"
spec:
  ingressClassName: nginx
  rules:
    - host: &host "nextcloud.${SECRET_DOMAIN}"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: nextcloud
                port:
                  number: 80
  tls:
    - hosts:
        - *host

---
apiVersion: v1
kind: Endpoints
metadata:
  name: nextcloud
  namespace: external
subsets:
  - addresses:
      - ip: ${NEXTCLOUD_IP}
    ports:
      - name: http
        port: 80
        protocol: TCP
